JG-2008-07-11-0: Bugfix:    Fixed qalter_iz_2575 test with maintrunk.
                 Review:    DG

AP-2008-07-10-0: Enhancem.: Create the test for upgrade procedure
                 Bugfix:    cannot modify cvs release tag in testsuite config
                 Bugfix:    ts_log_frame doesn't create line
                 Issue:     203, 201, 204
                 Review:    LP

JG-2008-07-10-1: Enhancem.: Added test for IZ 2575 in
                            system_tests/clients/qalter.
                 Review:    MD

ZG-2008-07-10-0: Bugfix:    modifing gettext_procedures.60 file to conform to the
                            changed install message did for CR 6589820
                 Review:    LP

JG-2008-07-10-0: Enhancem.: Added test bugs/issuezilla/1751.
                            Cleanup.
                 Review:    RD

CR-2008-07-10-0: Cleanup:   enhanced issue check 2372
                 Review:    DG

LP-2008-07-09-0: Bugfix:    Fixed BDB install messages for 6.2
                 Review:    JO

RH-2008-07-07-0: Bugfix:    Hedeby:
                            o Parsing of hedeby log files did not work if jvm log
                              contains source class and method.
                            o Stacktraces in log file collection are not in the correct order
                 Review:    CR

RH-2008-06-25-0: Enhancem:  Hedeby:
                            o New test unassign resources for ge-adapter
                              testing the job suspend policy
                            o new method wait_for_notification (searches for an event
                              sequence in the hedeby history)
                            o new method get_history for reading the hedeby history
                            o new method reload_hedeby_component (sdmadm uc)
                            o new method set_hedeby_default_job_suspend_policy
                            o new method set_hedeby_job_suspend_policy
                 Review:    RM
