@@ -1,3 +1,7 @@
+CR-2008-07-11-0: Bugfix:     correct exp. gdi_retries count in check 2372
+                 Belongs To: CR-2008-07-10-0
+                 Review:     MD
+
 JG-2008-07-11-0: Bugfix:    Fixed qalter_iz_2575 test with maintrunk.
                  Review:    DG
 
